@@ -4,15 +4,16 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 plugins {
   `java-library`
   id("io.sentry.javadoc")
-  kotlin("jvm")
+  alias(libs.plugins.kotlin.jvm)
   jacoco
   alias(libs.plugins.errorprone)
   alias(libs.plugins.gradle.versions)
   alias(libs.plugins.buildconfig)
+  alias(libs.plugins.animalsniffer)
 }
 
 tasks.withType<KotlinCompile>().configureEach {
-  kotlinOptions.jvmTarget = JavaVersion.VERSION_1_8.toString()
+  compilerOptions.jvmTarget = org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_1_8
 }
 
 dependencies {
@@ -31,6 +32,9 @@ dependencies {
   testImplementation(libs.msgpack)
   testImplementation(libs.okio)
   testImplementation(projects.sentryTestSupport)
+
+  val gummyBearsModule = libs.gummy.bears.api21.get().module
+  signature("${gummyBearsModule}:${libs.versions.gummyBears.get()}@signature")
 }
 
 configure<SourceSetContainer> { test { java.srcDir("src/test/java") } }
@@ -44,6 +48,19 @@ tasks.jacocoTestReport {
   }
 }
 
+animalsniffer {
+  ignore =
+    listOf(
+      // We manually check on Android if it's available (API 26+).
+      "java.time.Instant"
+    )
+}
+
+tasks.animalsnifferMain {
+  // Uses java.util.function.Supplier, but must be manually invoked.
+  exclude("**/io/sentry/SentryWrapper.class")
+}
+
 tasks {
   jacocoTestCoverageVerification {
     violationRules { rule { limit { minimum = Config.QualityPlugins.Jacoco.minimumCoverage } } }
@@ -51,8 +68,10 @@ tasks {
   check {
     dependsOn(jacocoTestCoverageVerification)
     dependsOn(jacocoTestReport)
+    dependsOn(animalsnifferMain)
   }
   test {
+    jvmArgs("--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED")
     environment["SENTRY_TEST_PROPERTY"] = "\"some-value\""
     environment["SENTRY_TEST_MAP_KEY1"] = "\"value1\""
     environment["SENTRY_TEST_MAP_KEY2"] = "value2"
